<resources>
    <string name="app_name">Lab05</string>
    <string name="button1_slot_text">Slot1</string>
    <string name="button2_slot_text">Slot2</string>
    <string name="button3_slot_text">Slot3</string>

    <string name="name_text"></string>
    <string name="class_text"></string>
    <string name="num_text"></string>
    <string name="edit_button">UPDATE</string>
    <string name="cancel_button">DELETE</string>
    <string name="name_set">Name</string>
    <string name="setname"/>
    <string name="setclass"/>
    <string name="setnum"/>
    <string name="slotshow"/>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_edit"/>
    <string name="userName_hint">UserName</string>
    <string name="password_hint">Password</string>
    <string name="login_page">LOGIN</string>
    <string name="clear_button">CLEAR</string>
    <string name="login_button">LOGIN</string>
    <string name="error_massage"/>
    <string name="info_text">Infi Page</string>
    <string name="about_info">About Me</string>

</resources>
