<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
               tools:context=".LoginFragment">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password_edit"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/usernaem_edit" android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/password_hint"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/user_edit"
                android:ems="10"
                android:id="@+id/usernaem_edit"
                android:hint="@string/userName_hint"
                android:layout_marginStart="20dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <TextView
                android:text="@string/login_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:textSize="36sp"
                android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="20dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                app:layout_constraintBaseline_toBaselineOf="@+id/button2" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="70dp"/>
        <Button
                android:text="@string/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/password_edit" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="70dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


