<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="car1" type="com.example.lab05.CarList"/>
        <variable name="car2" type="com.example.lab05.CarList"/>
        <variable name="car3" type="com.example.lab05.CarList"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <Button
                android:text="@string/button1_slot_text"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/button_slot1" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button_slot2"
                android:layout_marginStart="@dimen/margin_button"
                android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"/>
        <Button
                android:text="@string/button2_slot_text"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/button_slot2"
                app:layout_constraintStart_toEndOf="@+id/button_slot1" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/button_slot3"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_slot1"/>
        <Button
                android:text="@string/button3_slot_text"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:id="@+id/button_slot3"
                app:layout_constraintStart_toEndOf="@+id/button_slot2" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/margin_button"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_slot2"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/name_text"
                android:ems="10"
                android:id="@+id/name_text" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/button_slot2" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:autofillHints=""
                android:visibility="visible" android:hint="ชื่อเจ้าของ"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/class_text"
                android:ems="10"
                android:id="@+id/class_text" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/name_text" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"
                android:visibility="visible" android:hint="ยี่ห้อรถ"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/num_text"
                android:ems="10"
                android:id="@+id/num_text" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/class_text" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:visibility="visible"
                android:hint="ทะเบียนรถ"/>
        <Button
                android:text="@string/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_button" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/num_text" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="20dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_button"
                app:layout_constraintBaseline_toBaselineOf="@+id/edit_button" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="50dp"/>
        <TextView
                android:text="@string/setname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView8" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/button_slot2"
                android:visibility="visible" android:textAlignment="center" android:fontFamily="@font/roboto"
                android:textSize="30sp"/>
        <TextView
                android:text="@string/setclass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:visibility="visible"
                android:textAlignment="center"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView8"
                android:textSize="30sp"/>
        <TextView
                android:text="@string/setnum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:visibility="visible" android:textAlignment="center"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView9"
                android:textSize="30sp"/>
        <TextView
                android:text="@string/slotshow"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView11" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textAlignment="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
